@@ -450,72 +450,6 @@ $collection['75']->fromArray(array (
   'assets' => '',
   'help_url' => 'http://rtfm.modx.com/display/revolution20/Policies',
 ), '', true, true);
-$collection['76']= $xpdo->newObject('modAction');
-$collection['76']->fromArray(array (
-  'id' => 76,
-  'namespace' => 'core',
-  'parent' => 36,
-  'controller' => 'resource/weblink/update',
-  'haslayout' => 1,
-  'lang_topics' => 'resource',
-  'assets' => '',
-  'help_url' => 'http://rtfm.modx.com/display/revolution20/Weblink',
-), '', true, true);
-$collection['77']= $xpdo->newObject('modAction');
-$collection['77']->fromArray(array (
-  'id' => 77,
-  'namespace' => 'core',
-  'parent' => 36,
-  'controller' => 'resource/weblink/create',
-  'haslayout' => 1,
-  'lang_topics' => 'resource',
-  'assets' => '',
-  'help_url' => 'http://rtfm.modx.com/display/revolution20/Weblink',
-), '', true, true);
-$collection['78']= $xpdo->newObject('modAction');
-$collection['78']->fromArray(array (
-  'id' => 78,
-  'namespace' => 'core',
-  'parent' => 36,
-  'controller' => 'resource/symlink/update',
-  'haslayout' => 1,
-  'lang_topics' => 'resource',
-  'assets' => '',
-  'help_url' => 'http://rtfm.modx.com/display/revolution20/Symlink',
-), '', true, true);
-$collection['79']= $xpdo->newObject('modAction');
-$collection['79']->fromArray(array (
-  'id' => 79,
-  'namespace' => 'core',
-  'parent' => 36,
-  'controller' => 'resource/symlink/create',
-  'haslayout' => 1,
-  'lang_topics' => 'resource',
-  'assets' => '',
-  'help_url' => 'http://rtfm.modx.com/display/revolution20/Symlink',
-), '', true, true);
-$collection['80']= $xpdo->newObject('modAction');
-$collection['80']->fromArray(array (
-  'id' => 80,
-  'namespace' => 'core',
-  'parent' => 36,
-  'controller' => 'resource/staticresource/update',
-  'haslayout' => 1,
-  'lang_topics' => 'resource',
-  'assets' => '',
-  'help_url' => 'http://rtfm.modx.com/display/revolution20/Static+Resource',
-), '', true, true);
-$collection['81']= $xpdo->newObject('modAction');
-$collection['81']->fromArray(array (
-  'id' => 81,
-  'namespace' => 'core',
-  'parent' => 36,
-  'controller' => 'resource/staticresource/create',
-  'haslayout' => 1,
-  'lang_topics' => 'resource',
-  'assets' => '',
-  'help_url' => 'http://rtfm.modx.com/display/revolution20/Static+Resource',
-), '', true, true);
 $collection['82']= $xpdo->newObject('modAction');
 $collection['82']->fromArray(array (
   'id' => 82,
