@@ -12,3 +12,22 @@ if (!empty($classes)) {
     $this->createTable($classes);
 }
 unset($classes);
+
+/* remove some deprecated actions */
+$deprecatedActions = array(
+    'resource/staticresource/update',
+    'resource/staticresource/create',
+    'resource/symlink/update',
+    'resource/symlink/create',
+    'resource/weblink/update',
+    'resource/weblink/create',
+);
+foreach ($deprecatedActions as $controller) {
+    $action = $this->install->xpdo->getObject('modAction',array(
+        'controller' => $controller,
+        'namespace' => 'core',
+    ));
+    if ($action) {
+        $action->remove();
+    }
+}
