@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.1-rc1
 ====================================
+- [#MODX-2202] Removed deprecated modAction objects to prevent confusion
 - [#MODX-2325] Updated Swedish translation
 - Prevent bug that causes modal to overlap welcome screen
 - Allow non-empty responses to OnBeforeTVFormSave to prevent save
